<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp"/>

            <ImageView
                android:id="@+id/main_image"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="#000000"
                android:textStyle="bold"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp"/>


            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_gravity="center"
                android:elevation="10dp"
                android:textStyle="bold"
                android:background="@drawable/custom_button_background"
                android:textSize="18sp"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/image1"
                android:scaleType="fitXY"
                android:contentDescription="@string/logo"/>



    </LinearLayout>

</ScrollView>